<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/colorSecondaryText"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_contact_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_msg_preview"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toTopOf="@+id/civ_avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_msg_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/text_msg_preview"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/civ_avatar"
        app:layout_constraintEnd_toStartOf="@+id/tv_msg_count"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/tv_contact_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_name" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_time"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tv_contact_name"
        app:layout_constraintTop_toTopOf="@+id/tv_contact_name" />

    <TextView
        android:id="@+id/tv_msg_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_msg_count"
        android:gravity="center"
        android:paddingStart="7dp"
        android:paddingTop="2dp"
        android:paddingEnd="7dp"
        android:paddingBottom="2dp"
        android:text="@string/text_1"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_msg_preview"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/tv_msg_preview"
        app:layout_constraintTop_toTopOf="@+id/tv_msg_preview" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryBg"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="@+id/tv_contact_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>